# GDAuth

./: CMakeLists.txt  README.md  about.md  changelog.md  mod.json
include/: authentication.hpp
server/: package-lock.json  package.json  wrangler.toml
server/src/: index.ts
src/: authentication.cpp
test/: CMakeLists.txt  mod.json
test/src/: main.cpp
